@@ -55,6 +55,20 @@
 </p>
 
 
+<!-- BEGIN image_list_tpl -->
+<table class="list" width="100%" cellspacing="0" cellpadding="4" border="0">
+<!-- BEGIN image_tpl -->
+<tr>
+	<td width="1%" class="{td_class}">
+	<img src="{image_url}" width="{image_width}" height="{image_height}" border="2" />
+	{image_caption}
+	</td>
+</tr>
+<!-- END image_tpl -->
+
+</table>
+<!-- END image_list_tpl -->
+
 <!-- BEGIN attribute_list_tpl -->
 <!-- BEGIN type_item_tpl -->
 <h2>{type_name}</h2>
