@@ -28,7 +28,7 @@ User=publish
 Password=publish
 DefaultPage=disabled
 LogFile=error.log
-EnabledModules=eZArticle;eZTrade;eZForum;eZLink;eZPoll;eZAd;eZNewsfeed;eZBug;eZContact;eZTodo;eZCalendar;eZFileManager;eZImageCatalogue;eZAddress;eZBulkMail;eZURLTranslator;eZStats;eZQuiz;eZSysinfo;eZSiteManager;eZUser;eZForm;eZMediaCatalogue
+EnabledModules=eZArticle;eZTrade;eZForum;eZLink;eZPoll;eZAd;eZNewsfeed;eZBug;eZContact;eZTodo;eZCalendar;eZFileManager;eZImageCatalogue;eZAddress;eZBulkMail;eZURLTranslator;eZStats;eZQuiz;eZSysinfo;eZSiteManager;eZUser;eZForm;eZMediaCatalogue;eZMessage
 CacheHeaders=true
 CheckDependence=enabled
 ModuleTab=enabled
