@@ -763,3 +763,25 @@ CREATE TABLE eZUser_Trustees (
   PRIMARY KEY (ID)
 ) TYPE=MyISAM;
 
+
+
+CREATE TABLE eZMessage (
+  ID int(11) NOT NULL auto_increment,
+  UserID int(11) NOT NULL default '0',
+  Subject varchar(255) NOT NULL default '',
+  Description text,
+  PRIMARY KEY (ID)
+) TYPE=MyISAM;
+
+
+
+CREATE TABLE eZMessage_Message (
+  ID int(11) NOT NULL auto_increment,
+  FromUserID int(11) NOT NULL default '0',
+  ToUserID int(11) NOT NULL default '0',
+  Created timestamp(14) NOT NULL,
+  IsRead int(11) NOT NULL default '0',
+  Subject varchar(255) NOT NULL default '',
+  Description text,
+  PRIMARY KEY (ID)
+) TYPE=MyISAM;
